# music-librarian

./: .gitignore  CLAUDE.md  LICENSE  README.md  music_librarian_spec.md  pyproject.toml
music_librarian/: audio_processor.py  cli.py  file_discovery.py  metadata_handler.py
tests/: test_music_librarian.py
